<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/crop_selected_detail_item_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_margin="@dimen/margin4"
        android:padding="@dimen/margin4"
        app:cardCornerRadius="@dimen/margin4"
        app:cardElevation="@dimen/margin4">

        <LinearLayout
            android:id="@+id/item_det"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/margin36"
            android:elevation="@dimen/margin4"
            android:orientation="vertical"
            android:padding="@dimen/_12sdp">


            <agri.app.Customviews.HelveticaNeuBoldTextView
                android:id="@+id/crop_selected_detail_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16sdp"
                android:text="@string/temp_veg"
                android:textSize="@dimen/_24ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin24"
                android:orientation="horizontal">

                <agri.app.Customviews.HelveticaNeuBoldTextView
                    android:id="@+id/crop_selected_detail_item_summary"
                    android:layout_width="@dimen/margin160"
                    android:layout_height="@dimen/margin160"
                    android:text="@string/tomato_summary"
                    android:textSize="@dimen/text_size20" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/crop_selected_detail_item_image"
                    android:src="@drawable/tomato" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_req"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin24"
                android:layout_weight="1"
                android:orientation="vertical">

                <agri.app.Customviews.HelveticaNeuBoldTextView
                    android:id="@+id/crop_selected_detail_item_req"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/requirements"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:textSize="@dimen/_20ssp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/crop_selected_child_rec"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_finance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin24"
                android:layout_weight="1"
                android:orientation="vertical">

                <agri.app.Customviews.HelveticaNeuBoldTextView
                    android:id="@+id/crop_selected_detail_item_fin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:text="@string/finance"
                    android:textSize="@dimen/_20ssp" />

                <android.support.v7.widget.CardView
                    android:id="@+id/crop_detail_item_card_fin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/margin2"
                    app:cardElevation="@dimen/margin4">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <!--Visual Data-->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:weightSum="0.6"
                            android:orientation="vertical">

                            <agri.app.Customviews.HelveticaNeuRegularTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin16"
                                android:layout_marginEnd="@dimen/margin16"
                                android:text="@string/ecpected_yield"
                                android:textSize="@dimen/text_size16" />

                            <agri.app.Customviews.HelveticaNeuRegularTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin16"
                                android:layout_marginEnd="@dimen/margin16"
                                android:text="@string/expected_rate"
                                android:textSize="@dimen/text_size16" />

                            <agri.app.Customviews.HelveticaNeuRegularTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin16"
                                android:layout_marginEnd="@dimen/margin16"
                                android:text="@string/expected_scale"
                                android:textSize="@dimen/text_size16" />

                            <agri.app.Customviews.HelveticaNeuRegularTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin16"
                                android:layout_marginEnd="@dimen/margin16"
                                android:text="@string/expected_cost"
                                android:textSize="@dimen/text_size16" />

                            <agri.app.Customviews.HelveticaNeuRegularTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin16"
                                android:layout_marginEnd="@dimen/margin16"
                                android:text="@string/expected_profit"
                                android:textSize="@dimen/text_size16" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:weightSum="0.4"
                            android:orientation="vertical">

                            <agri.app.Customviews.HelveticaNeuRegularTextView
                                android:id="@+id/crop_selected_detail_item_fin_yi"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin16"
                                android:layout_marginEnd="@dimen/margin16"
                                android:text="@string/_430_mton"
                                android:textSize="@dimen/text_size16" />

                            <agri.app.Customviews.HelveticaNeuRegularTextView
                                android:id="@+id/crop_selected_detail_item_fin_rate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin16"
                                android:layout_marginEnd="@dimen/margin16"
                                android:text="@string/_600_rs_kg"
                                android:textSize="@dimen/text_size16" />

                            <agri.app.Customviews.HelveticaNeuRegularTextView
                                android:id="@+id/crop_selected_detail_item_fin_scale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin16"
                                android:layout_marginEnd="@dimen/margin16"
                                android:text="@string/_2_6_lakh_rs"
                                android:textSize="@dimen/text_size16" />

                            <agri.app.Customviews.HelveticaNeuRegularTextView
                                android:id="@+id/crop_selected_detail_item_fin_cost"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin16"
                                android:layout_marginEnd="@dimen/margin16"
                                android:text="@string/_600_rs"
                                android:textSize="@dimen/text_size16" />

                            <agri.app.Customviews.HelveticaNeuRegularTextView
                                android:id="@+id/crop_selected_detail_item_fin_profit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin16"
                                android:layout_marginEnd="@dimen/margin16"
                                android:text="@string/rs_60"
                                android:textSize="@dimen/text_size16" />
                        </LinearLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:id="@+id/crop_selection_cancel"
                    android:background="@drawable/button_click_effect"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:onClick="CropAdd"
                    android:id="@+id/crop_selection_add"
                    android:background="@drawable/button_click_effect"
                    android:text="@string/add"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>