<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:gravity="center"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/mall_other_item"
        android:layout_width="@dimen/margin160dp"
        android:layout_height="@dimen/margin200dp"
        android:layout_margin="@dimen/margin16"
        android:onClick="GroupList"
        app:cardCornerRadius="@dimen/margin8"
        app:cardElevation="@dimen/margin8">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="@dimen/margin16"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mall_group_image"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />

            <agri.app.Customviews.HelveticaNeuBoldTextView
                android:id="@+id/mall_group_category_item_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/item_name"
                android:textAlignment="center" />

            <agri.app.Customviews.HelveticaNeuBoldTextView
                android:id="@+id/mall_group_category_item_size"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/size_1_l"
                android:textAlignment="center" />

            <agri.app.Customviews.HelveticaNeuBoldTextView
                android:id="@+id/mall_group_category_item_price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/price_300_rs"
                android:textAlignment="center" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>

